--- a/app/templates/venue.hbs
+++ b/app/templates/venue.hbs
@@ -1,18 +1,31 @@
 <h2>{{model.name}}</h2>
 
-{{date-format model.date}}
-<p>
-  {{model.description}}
-</p>
-
-<button class="btn btn-danger" name="button" {{action 'showReview'}}>Review</button>
+<h4></h4> {{model.description}}
 
 {{#if reviewing}}
   <div class="well form-group">
     {{input type="text" placeholder="Your Name" value=author}}
     {{input type="text" placeholder="What do you think?" value=body}}
-    <button class="btn btn-danger" name="button" {{action 'addReview'}}>Add Review</button>
+    <button class="btn btn-danger" name="button" {{action 'addReview'}}>Post This Review</button>
   </div>
+{{else}}
+  <button class="btn btn-danger" name="button" {{action 'showReview'}}>Add Review</button>
 {{/if}}
 
-{{outlet}}
+<br><br>
+
+<div class="well">
+  <h4>Reviews:</h4>
+  {{#each review in model.reviews}}
+    <div class="review-author">
+      <span class="descriptor">Author: </span> <span>{{review.author}}</span>
+      <span class="descriptor">Posted on:</span> <span>{{date-format review.date}}</span>
+    </div>
+    <div class="review">
+      <div class="body">
+        {{review.body}}
+      </div>
+    </div>
+    <hr>
+  {{/each}}
+</div>
