update google maps to take address instead of lat-long as input

--- a/app/templates/venue.hbs
+++ b/app/templates/venue.hbs
@@ -1,6 +1,6 @@
 <h2>{{model.name}}</h2>
-{{google-map latitude="34.851939" longitude="-82.399752"}}
-<h4>{{model.description}}</h4> 
+{{google-map address="1037 SW Broadway Portland, OR 97205"}}
+<h4>{{model.description}}</h4>
 
 {{#if reviewing}}
   <div class="well form-group">
