--- a/app/templates/venue.hbs
+++ b/app/templates/venue.hbs
@@ -1,5 +1,5 @@
 <h2>{{model.name}}</h2>
-{{google-map address="1037 SW Broadway Portland, OR 97205"}}
+{{google-map address=model.mapAddress}}
 <h4>{{model.description}}</h4>
 
 {{#if reviewing}}
