--- a/app/templates/add-venue.hbs
+++ b/app/templates/add-venue.hbs
@@ -1,10 +1,10 @@
-<div class="form-group">
+<div class="form-group max-height">
   <form>
     {{input type="text" placeholder="Name" value=name }}
     <br><br>
     {{input type="text" placeholder="Map Address" value=mapAddress }}
     <br><br>
-    {{textarea placeholder="Add a brief description" value=description cols="40" rows="6"}}
-    <button class="btn btn-primary" {{action 'addVenue'}}>Submit</button>
+    {{textarea placeholder="Add a brief description" value=description cols="40" rows="6" required="required"}}
+    <button class="btn btn-primary" {{action 'addVenue'}} required="required">Submit</button>
   </form>
 </div>
