--- a/app/templates/venue.hbs
+++ b/app/templates/venue.hbs
@@ -6,6 +6,7 @@
   <div>
     <div class="well form-group">
       {{input type="text" placeholder="Your Name" value=author}}
+      Rating: {{input value=stars type="number" min="1" max="5"}}
       {{input type="text" placeholder="What do you think?" value=body}}
       <button class="btn btn-danger" name="button" {{action 'addReview'}}>Post This Review</button>
     </div>
@@ -20,6 +21,7 @@
 <div class="well">
   {{#each review in model.reviews}}
     <div class="review-author">
+      <span class="rating">{{star-rating review.stars '<span class="star glyphicon glyphicon-star"></span>'}}</span>
       <span>{{review.author}}</span>
       <span class="descriptor">posted {{date-format review.date}}</span>:
     </div>
