--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -26,3 +26,6 @@
     {{liquid-outlet}}
   </div>
 </div>
+
+
+<div id="background"><img src="http://clipart-finder.com/data/preview/65-concert_crowd.jpg" alt="" /></div>
